--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -1,21 +1,19 @@
 h1 {
 	display: block;
-	font-size: 36px;
-	line-height: 36px;
+	font-size: 24px;
+	line-height: 24px;
 	font-weight: bold;
 	margin: 0 auto;
 	text-align: center;
 	text-transform: uppercase;
 }
 
-
 .rule {
   line-height: .25;
   text-align: center;
 }
 .rule span {
-	background-color: rgb(255, 255, 255);
-	border: 1px solid $black;
+	background-color: $white;
 	display: inline-block;
 	width: auto;
 	padding: 30px;
@@ -25,16 +23,14 @@ h1 {
 .rule span:after {
   content: "";
   position: absolute;
-  height: 36px;
+  height: 30px;
   border-bottom: 1px solid $black;
   top: 0;
-  width: 600px;
+  width: 800px;
 }
 .rule span:before {
   right: 100%;
-  margin-right: 30px;
 }
 .rule span:after {
   left: 100%;
-  margin-left: 30px;
 }
