--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -1,5 +1,5 @@
 // Variables
-@import "helpers/_variables";
+@import 'helpers/variables';
 
 // Mixins
-@import "helpers/_clearfix";
+@import 'helpers/clearfix';
