start of carousel

--- a/scss/helpers/_variables.scss
+++ b/scss/helpers/_variables.scss
@@ -20,3 +20,18 @@ $container-small: layout(auto 4 .25 inside fluid isolate);
 $container-medium: layout($medium 12 .25 after fluid isolate);
 $container-large: layout($large 12 .25 after fluid isolate);
 $container-xlarge: layout($xlarge 12 .25 after fluid isolate);
+
+//== Carousel
+//
+//##
+
+$carousel-text-shadow:                        0 1px 2px rgba(0,0,0,.6) !default;
+$carousel-control-color:                      #fff !default;
+$carousel-control-width:                      15% !default;
+$carousel-control-opacity:                    .5 !default;
+$carousel-control-font-size:                  20px !default;
+
+$carousel-indicator-active-bg:                #fff !default;
+$carousel-indicator-border-color:             #fff !default;
+
+$carousel-caption-color:                      #fff !default;
