--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -1,3 +1,8 @@
+.fixedsticky {
+  background-color: $white;
+  top: 0;
+}
+
 .nav-collapse.disable-pointer-events {
   pointer-events: none !important;
 }
