--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,7 +3,6 @@
 @import "../bower_components/normalize-scss/_normalize";
 @import "../bower_components/breakpoint-sass/stylesheets/_breakpoint";
 @import "../bower_components/swiper/dist/css/swiper.scss";
-@import "/css/responsive-nav.css";
 
 @import "partials/_base";
 @import "partials/_colours";
@@ -32,6 +31,6 @@ hr {
 }
 
 .swiper-container {
-    width: 600px;
-    height: 300px;
+    width: 100%;
+    height: 770px;
 } 
