Fixing issue with sticky Nav

--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -1,6 +1,9 @@
 .fixedsticky {
   background-color: $white;
   top: 0;
+  left: 0;
+  z-index: $zindex-navbar-fixed;
+  margin: 0 auto;
 }
 
 .nav-collapse.disable-pointer-events {
