WIP: Typography + Spacing

--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -48,7 +48,7 @@
     *float: left;
     display: inline-block;
     float: none;
-    margin: 0 0 0 18px;
+    margin: 9px 0 0 18px;
     width: auto;
   }
 }
