--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,7 +27,7 @@ hr {
 	background: url("/img/hr-divider.svg") repeat-x;
 	border : 0;
 	height: 4px;
-	margin : 1em 0;
+	margin : 0 0 84px;
 }
 
 .swiper-container {
