--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -1,3 +1,24 @@
+h1 {
+  &.brand {
+    background: url('../img/wordmark_large.svg') no-repeat;
+    background-position: 0 0;
+    background-size: 100% auto;
+    font-size: 27px;
+    font-weight: bold;
+    line-height: 27px;
+    text-align: left;
+    text-indent: 100%; 
+    white-space: nowrap;
+    overflow: hidden;
+    text-transform: lowercase;
+  }
+
+  .small-caps {
+    font-size: 15px; 
+    text-transform: uppercase;
+  }
+}
+
 h2 {
   display: block;
   font-size: 24px;
@@ -10,6 +31,7 @@ h2 {
 
 .rule {
   line-height: .25;
+  margin: 0 0 84px;
   text-align: center;
 
   span {
@@ -37,4 +59,31 @@ h2 {
       left: 100%;
     }
   }
+}
+
+p {
+  font-family: serif;
+  font-size: 30px;
+  font-style: italic;
+  font-weight: normal;
+  line-height: 1.25em;
+  margin: 0 0 1em;
+}
+
+blockquote {
+  font-family: serif;
+  font-size: 39px;
+  font-style: italic;
+  font-weight: normal;
+  line-height: 1.25em;
+  margin: 0;
+
+}
+
+.center {
+  text-align: center;
+}
+
+.small-caps {
+  text-transform: uppercase;
 }
