--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -1,10 +1,3 @@
-.fixedsticky {
-  background-color: $white;
-  top: 0;
-  z-index: $zindex-navbar-fixed;
-  margin: 0 auto;
-}
-
 .nav-collapse.disable-pointer-events {
   pointer-events: none !important;
 }
@@ -48,7 +41,7 @@
     *float: left;
     display: inline-block;
     float: none;
-    margin: 9px 0 0 18px;
+    margin: 9px 0 0;
     width: auto;
   }
 }
@@ -57,8 +50,9 @@
   background: $brand-primary;
   color: $white;
   float: left;
-  font-size: 15px;
-  font-weight: bold;
+  font-family: $san-serif;
+  font-size: 18px;
+  font-weight: 700;
   padding: .5em 1em;
   text-decoration: none;
   width: 100%;
@@ -72,7 +66,7 @@
     font-size: 15px;
     -webkit-font-smoothing: antialiased;
     margin: 0;
-    padding: 15px;
+    padding: 0 15px;
     transition: background .5s ease;
   }
 
