--- a/scss/helpers/_variables.scss
+++ b/scss/helpers/_variables.scss
@@ -29,9 +29,6 @@ $container-large: layout($large 12 .25 after fluid isolate);
 $container-xlarge: layout($xlarge 12 .25 after fluid isolate);
 
 //== Carousel
-//
-//##
-
 $carousel-text-shadow:                        0 1px 2px rgba(0,0,0,.6) !default;
 $carousel-control-color:                      #fff !default;
 $carousel-control-width:                      15% !default;
@@ -42,3 +39,8 @@ $carousel-indicator-active-bg:                #fff !default;
 $carousel-indicator-border-color:             #fff !default;
 
 $carousel-caption-color:                      #fff !default;
+
+
+
+$serif: 'Droid Serif', serif;
+$san-serif: 'Open Sans Condensed', sans-serif;
