--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -83,6 +83,14 @@ h4 {
   margin: 0 0 1em;
 }
 
+h5 {
+  font-family: $serif;
+  font-size: 18px;
+  font-weight: normal;
+  text-transform: uppercase;
+  margin: 0 0 1em;
+}
+
 p {
   font-family: serif;
   font-size: 30px;
