--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,46 +1,4 @@
 // Third-party
-@import "../bower_components/susy/sass/_susy";
-@import "../bower_components/normalize-scss/_normalize";
-@import "../bower_components/breakpoint-sass/stylesheets/_breakpoint";
-@import "../bower_components/swiper/dist/css/swiper.scss";
-
-@import "partials/_base";
-@import "partials/_colours";
-@import "helpers/_reset";
-@import "partials/_typography";
-
-// Components
-@import "components/_header";
-@import "components/_navigation";
-@import "components/_footer";
-@import "components/_testimonial";
-@import "components/_services";
-@import "components/_awards";
-
-// Layouts
-@import "partials/_grid";
-@import "partials/_header";
-@import "partials/_footer";
-@import "partials/_sidebar";
-@import "partials/_community";
-
-//Pages
-
-
-hr {
-	background: url("/img/hr-divider.png") repeat-x;
-	background: url("/img/hr-divider.svg") repeat-x;
-	border : 0;
-	height: 4px;
-	margin : 72px 0;
-}
-
-.swiper-container {
-  width: 100%;
-  height: 767px;
-
-	.swiper-slide {
-		background: url("/img/_slide/1.jpg") no-repeat;
-	}
-
-}
+@import '../bower_components/susy/sass/susy';
+@import '../bower_components/normalize-scss/normalize';
+@import '../bower_components/breakpoint-sass/stylesheets/breakpoint';
