--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,17 +1,26 @@
 header {
+  @include breakpoint($small) {
+    margin-bottom: 275px;
+  }
+
   background: rgba(60, 60, 60, .5);
   height: 48px;
-  margin: 0 0 275px; 
+  margin: 0 0 100px;
 
   .brand {
+    @include breakpoint($small) {
+      height: 175px;
+      width: 175px;
+    }
+
     background: #e22d00 url('/img/logo.svg') no-repeat center 80%;
     background-size: 80%;
     display: block;
-    height: 175px;
+    height: 75px;
     margin: 0 auto;
     overflow: hidden;
     text-indent: 100%;
     white-space: nowrap;
-    width: 175px;
+    width: 75px;
   }
 }
