--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -2,46 +2,64 @@ footer {
   text-align: center;
 
   .s10 {
-    margin: 0 auto;
+    border-top: 1px dotted rgba(220, 220, 220, .6);
+    margin: 0 auto 15px;
+    padding: 15px 0 0;
     width: 231px;
   }
 }
 
 .logos {
   @include clearfix;
+  @include breakpoint($small) { 
+    width: 50%;
+  }
 
   margin: 0 auto 15px;
-  width: 50%;
+  width: 100%;
 
   a {
+    @include breakpoint($small) {
+      height: 75px;
+      width: 40%;
+    }
+
     background-size: 80%;
     display: block;
     float: left;
-    height: 75px;
-    margin: 0 5%;
+    height: 50px;
+    margin: 15px 5%;
     overflow: hidden;
     text-indent: 100%;
     white-space: nowrap;
-    width: 40%;
+    width: 90%;
 
     &.cmf {
       background: url('/img/cmf.svg') no-repeat center;
     }
 
     &.lazar {
-      background: url('/img/lazar.svg') no-repeat center right;
+      @include breakpoint($small) {
+        background-position: center right;
+      }
+
+      background: url('/img/lazar.svg') no-repeat center center;
       background-size: auto 70%;
     }
   }
 }
 
 .rules {
-  border: 1px dotted rgba(220, 220, 220, .6);
+  @include breakpoint ($small) {
+    margin: 0 auto 15px;
+    width: 50%;
+  }
+
   border-left: 0;
   border-right: 0;
-  margin: 0 auto 15px;
+  margin: 0 5% 15px;
   padding: 15px 0;
-  width: 50%;
+  width: 90%;
 
   ul {
     list-style-type: none;
@@ -49,9 +67,14 @@ footer {
     padding: 0;
 
     li {
-      border-right: 1px solid rgba(220, 220, 220, .6);
-      display: inline-block;
-      margin: 0 0 0 15px;
+      @include breakpoint ($small) {
+        display: inline-block;
+        border-right: 1px solid rgba(220, 220, 220, .6);
+        margin: 0 0 0 15px;
+      }
+
+      display: block;
+      margin: 15px 0;
       padding: 0 15px 0 0; 
 
       &:last-child {
@@ -64,6 +87,10 @@ footer {
     color: #c8c8c8;
     text-decoration: none;
     text-transform: uppercase;
+
+    &:hover {
+      color: #ee3c00;
+    }
   }
 }
 
