--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@
 @import 'base/typography';
 
 @import 'components/buttons';
+@import 'components/share';
 
 @import 'layout/header';
 @import 'layout/about';
