--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,11 +1,7 @@
 html {
-  box-sizing: border-box;
-}
-
-body {
-  @include clearfix;
-  background: #3c3c3c url('/img/_bg.jpg') no-repeat center;
+  background: url('/img/_bg.jpg') no-repeat center center fixed; 
   background-size: cover;
+  box-sizing: border-box;
 }
 
 *, 
