--- a/scss/helpers/_variables.scss
+++ b/scss/helpers/_variables.scss
@@ -3,7 +3,7 @@ $xsmall: 320px;
 $small: 768px;
 $medium: 920px;
 $large:	1100px;
-$xlarge: 1100px;
+$xlarge: $large;
 
 //Grid Setting
 $grid-columns: 12;
