Analytics and Test Build

--- a/scss/layout/_about.scss
+++ b/scss/layout/_about.scss
@@ -16,7 +16,7 @@
       height: auto;
     }
 
-    background: transparent url('/img/pet_skills.jpg') no-repeat center;
+    background: transparent url('../img/pet_skills.jpg') no-repeat center;
     background-size: cover;
     box-sizing: border-box;
     content: '';
