--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,5 +1,5 @@
 html {
-  background: url('/img/_bg.jpg') no-repeat center center fixed; 
+  background: url('../img/_bg.jpg') no-repeat center center fixed; 
   background-size: cover;
   box-sizing: border-box;
 }
