--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -35,7 +35,7 @@ footer {
     width: 90%;
 
     &.cmf {
-      background: url('/img/cmf.svg') no-repeat center;
+      background: url('../img/cmf.svg') no-repeat center;
     }
 
     &.lazar {
@@ -43,7 +43,7 @@ footer {
         background-position: center right;
       }
 
-      background: url('/img/lazar.svg') no-repeat center center;
+      background: url('../img/lazar.svg') no-repeat center center;
       background-size: auto 70%;
     }
   }
