--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -13,7 +13,7 @@ header {
       width: 175px;
     }
 
-    background: #e22d00 url('/img/logo.svg') no-repeat center 80%;
+    background: #e22d00 url('../img/logo.svg') no-repeat center 80%;
     background-size: 80%;
     display: block;
     height: 75px;
