--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,7 +1,7 @@
 html {
-  background: url('../img/_bg.jpg') no-repeat center center fixed; 
   background-size: cover;
   box-sizing: border-box;
+  font-size: 62.5%;
 }
 
 *, 
@@ -9,3 +9,9 @@ html {
 *:after {
   box-sizing: inherit;
 }
+
+body {
+  background-color: $white;
+  height: 100vh;
+}
+
