--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,103 +1,36 @@
-footer {
-  text-align: center;
-
-  .s10 {
-    margin: 0 auto 15px;
-    padding: 15px 0 0;
-    width: 231px;
-  }
-}
-
-.logos {
+.contact {
   @include clearfix;
-  @include breakpoint($small) { 
-    width: 50%;
-  }
-
-  margin: 0 auto 15px;
+  align-items: flex-start;
+  background-color: $grey;
+  box-shadow: inset 0 5px 0 $brand-primary;
+  color: $white;
+  display: flex;
+  flex-direction: row;
+  flex-flow: flex-start;
+  padding: 3.6rem 0;
   width: 100%;
 
-  a {
-    @include breakpoint($small) {
-      height: 75px;
-      width: 40%;
-    }
-
-    background-size: 80%;
-    display: block;
-    float: left;
-    height: 50px;
-    margin: 15px 5%;
-    overflow: hidden;
-    text-indent: 100%;
-    white-space: nowrap;
-    width: 90%;
-
-    &.cmf {
-      background: url('../img/cmf.svg') no-repeat center;
-    }
-
-    &.lazar {
-
-      @include breakpoint($xsmall) {
-        background-size: auto;
-      }
-
-      @include breakpoint($small) {
-        background-position: center right;
-        background-size: auto 50%;
-      }
-
-      background: url('../img/lazar.svg') no-repeat center center;
-      background-size: auto 70%;
-    }
-  }
-}
-
-.rules {
-  @include breakpoint ($small) {
-    margin: 0 auto 15px;
-    width: 50%;
+  h2 {
+    color: $black;
+    font-weight: bold;
   }
 
-  border: 1px dotted rgba(220, 220, 220, .6);
-  border-left: 0;
-  border-right: 0;
-  margin: 0 5% 15px;
-  padding: 15px 0;
-  width: 90%;
-
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-
-    li {
-      @include breakpoint ($small) {
-        display: inline-block;
-        border-right: 1px solid rgba(220, 220, 220, .6);
-        margin: 0 0 0 15px;
-      }
-
-      display: block;
-      margin: 15px 0;
-      padding: 0 15px 0 0; 
-
-      &:last-child {
-        border: 0;
-      }
-    }
+  p {
+    color: $black;
+    font-size: 3.6rem;
+    font-weight: 100;
   }
 
   a {
-    color: #c8c8c8;
+    border-bottom: 2px solid $white;
+    color: $brand-primary;
+    font-weight: normal;
     text-decoration: none;
-    text-transform: uppercase;
+    text-transform: none;
+    transition: border-bottom-color 240ms linear;
 
     &:hover {
-      color: #ee3c00;
+      border-bottom-color: $brand-primary;
     }
   }
 }
-
-
