--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,26 +1,28 @@
 header {
-  @include breakpoint($small) {
-    margin-bottom: 275px;
+  display: block;
+}
+
+.logo {
+  display: block;
+
+  svg {
+    fill: $brand-primary;
+    float: left;
+    height: 3rem;
+    margin-right: 1rem;
+    transition: all .5s ease;
+    width: auto;
   }
 
-  background: rgba(60, 60, 60, .5);
-  height: 48px;
-  margin: 0 0 50px;
+  h1 {
+    float: left;
+    font-size: 2rem;
+    margin: 0;
 
-  .brand {
-    @include breakpoint($small) {
-      height: 175px;
-      width: 175px;
+    a {
+      color: $brand-primary;
+      font-weight: normal;
+      text-decoration: none;
     }
-
-    background: #e22d00 url('../img/logo.svg') no-repeat center 80%;
-    background-size: 80%;
-    display: block;
-    height: 75px;
-    margin: 0 auto;
-    overflow: hidden;
-    text-indent: 100%;
-    white-space: nowrap;
-    width: 75px;
   }
 }
