--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,17 +2,21 @@
 @import '../bower_components/susy/sass/susy';
 @import '../bower_components/normalize-scss/normalize';
 @import '../bower_components/breakpoint-sass/stylesheets/breakpoint';
+@import '../bower_components/responsive-nav/responsive-nav';
 
 @import 'helpers/variables';
 @import 'helpers/clearfix';
 @import 'helpers/grid';
+@import 'helpers/spacers';
 
 @import 'base/base';
+@import 'base/animations';
 @import 'base/typography';
 
+@import 'components/nav';
 @import 'components/buttons';
-@import 'components/share';
 
 @import 'layout/header';
 @import 'layout/about';
+@import 'layout/work';
 @import 'layout/footer';
