Text in + Grid bug fix

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,7 +1,9 @@
 html {
   background-size: cover;
   box-sizing: border-box;
+  font-family: "GothamRndSSm-Book", sans-serif;
   font-size: 62.5%;
+
 }
 
 *, 
