--- a/scss/layout/_work.scss
+++ b/scss/layout/_work.scss
@@ -8,7 +8,7 @@
   flex-direction: row;
   flex-flow: flex-start;
   flex-wrap: wrap;
-  padding: 3.6rem 0 0;
+  padding: 3.6rem 0;
   width: 100%;
 
   .whole {
@@ -21,19 +21,12 @@
     max-width: 50%;
   }
 
-  h2 {
-    color: $black;
-    font-size: 3.6rem;
-    font-weight: bold;
-    line-height: 1.25em;
-  }
-
   p {
     line-height: 1.5em;
     margin: 0 0 1em;
 
     &.intro {
-      color: $black;
+      color: $white;
       font: 3.6rem/1em $font-stack;
       font-weight: 100;
       margin-bottom: 3.6rem;
@@ -51,18 +44,19 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 90%;
+    vertical-align: bottom;
   }
 
-  &.stage10 {
-    background-color: $stage10;
-  }
+}
 
-  &.sfu {
-    background-color: $sfu;
-  }
+.stage10 {
+  background-color: $stage10;
+}
 
-  &.freelance {
-    background-color: $freelance;
-  }
+.sfu {
+  background-color: $sfu;
+}
+
+.freelance {
+  background-color: $freelance;
 }
