--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import '../bower_components/normalize-scss/normalize';
 @import '../bower_components/breakpoint-sass/stylesheets/breakpoint';
 @import '../bower_components/responsive-nav/responsive-nav';
+@import '../bower_components/Swiper/dist/css/swiper';
 
 @import 'helpers/variables';
 @import 'helpers/clearfix';
@@ -20,3 +21,4 @@
 @import 'layout/about';
 @import 'layout/work';
 @import 'layout/footer';
+
