image comparison component

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,6 +16,8 @@
 
 @import 'components/nav';
 @import 'components/buttons';
+@import 'components/compare';
+
 
 @import 'layout/header';
 @import 'layout/about';
