--- a/scss/components/_compare.scss
+++ b/scss/components/_compare.scss
@@ -1,36 +1,10 @@
-// Main components 
-
-header {
-  position: relative;
-  height: 160px;
-  line-height: 160px;
-  text-align: center;
-}
-header h1 {
-  font-size: 22px;
-  font-size: 1.375rem;
-  color: #ffffff;
-  font-weight: 300;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-@media only screen and (min-width: 768px) {
-  header {
-    height: 240px;
-    line-height: 240px;
-  }
-  header h1 {
-    font-size: 32px;
-    font-size: 2rem;
-  }
-}
-
 .cd-image-container {
+  margin: 0 auto;
+  max-width: 1100px;
   position: relative;
-  width: 90%;
-  max-width: 768px;
-  margin: 0em auto;
+  width: 100%;
 }
+
 .cd-image-container img {
   display: block;
 }
@@ -39,29 +13,20 @@ header h1 {
   position: absolute;
   bottom: 0;
   right: 0;
-  color: #ffffff;
+  color: $white;
   padding: 1em;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   opacity: 0;
-  -webkit-transform: translateY(20px);
-  -moz-transform: translateY(20px);
-  -ms-transform: translateY(20px);
-  -o-transform: translateY(20px);
   transform: translateY(20px);
-  -webkit-transition: -webkit-transform 0.3s 0.7s, opacity 0.3s 0.7s;
-  -moz-transition: -moz-transform 0.3s 0.7s, opacity 0.3s 0.7s;
   transition: transform 0.3s 0.7s, opacity 0.3s 0.7s;
 }
+
 .cd-image-label.is-hidden {
   visibility: hidden;
 }
 .is-visible .cd-image-label {
   opacity: 1;
-  -webkit-transform: translateY(0);
-  -moz-transform: translateY(0);
-  -ms-transform: translateY(0);
-  -o-transform: translateY(0);
   transform: translateY(0);
 }
 
@@ -73,12 +38,7 @@ header h1 {
   height: 100%;
   overflow: hidden;
   /* Force Hardware Acceleration in WebKit */
-  -webkit-transform: translateZ(0);
-  -moz-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  -o-transform: translateZ(0);
   transform: translateZ(0);
-  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
 .cd-resize-img img {
@@ -145,28 +105,18 @@ header h1 {
   margin-left: -22px;
   margin-top: -22px;
   border-radius: 50%;
-  background: #dc717d url("../img/cd-arrows.svg") no-repeat center center;
+  background: rgba(255, 255, 255, 0) url("../img/cd-arrows.svg") no-repeat center center;
+  border: 2px solid $white;
   cursor: move;
-  box-shadow: 0 0 0 6px rgba(0, 0, 0, 0.2), 0 0 10px rgba(0, 0, 0, 0.6), inset 0 1px 0 rgba(255, 255, 255, 0.3);
   opacity: 0;
-  -webkit-transform: translate3d(0, 0, 0) scale(0);
-  -moz-transform: translate3d(0, 0, 0) scale(0);
-  -ms-transform: translate3d(0, 0, 0) scale(0);
-  -o-transform: translate3d(0, 0, 0) scale(0);
   transform: translate3d(0, 0, 0) scale(0);
 }
 .cd-handle.draggable {
   /* change background color when element is active */
-  background-color: #445b7c;
+  background-color: opacify($white, .8);
 }
 .is-visible .cd-handle {
   opacity: 1;
-  -webkit-transform: translate3d(0, 0, 0) scale(1);
-  -moz-transform: translate3d(0, 0, 0) scale(1);
-  -ms-transform: translate3d(0, 0, 0) scale(1);
-  -o-transform: translate3d(0, 0, 0) scale(1);
   transform: translate3d(0, 0, 0) scale(1);
-  -webkit-transition: -webkit-transform 0.3s 0.7s, opacity 0s 0.7s;
-  -moz-transition: -moz-transform 0.3s 0.7s, opacity 0s 0.7s;
   transition: transform 0.3s 0.7s, opacity 0s 0.7s;
 }
