--- a/scss/layout/_work.scss
+++ b/scss/layout/_work.scss
@@ -98,3 +98,12 @@ img {
   vertical-align: bottom;
   width: 100%;
 }
+
+
+video {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  vertical-align: bottom;
+  width: 320px;
+}
