--- a/scss/layout/_work.scss
+++ b/scss/layout/_work.scss
@@ -45,21 +45,19 @@
   background-color: $stage10;
 
   .swiper-pagination-bullet {
-    background: $white;
-    border: 2px solid $sfu;
+    background: darkern($stage10, 10);
+    border: 0;
     transition: all 240ms linear;
   }
 
   .swiper-pagination-bullet-active {
-    background: $stage10;
-    border-color: $white;
+    background: $white;
     opacity: 1;
   }
 
   .cd-handle.draggable {
     /* change background color when element is active */
     background-color: $stage10;
-    border: 2px solid $stage10;
 
   }
 }
@@ -68,21 +66,19 @@
   background-color: $sfu;
 
   .swiper-pagination-bullet {
-    background: $white;
-    border: 2px solid $sfu;
+    background: darkern($stage10, 10);
+    border: 0;
     transition: all 240ms linear;
   }
 
   .swiper-pagination-bullet-active {
-    background: $sfu;
-    border-color: $white;
+    background: $white;
     opacity: 1;
   }
 
   .cd-handle.draggable {
     /* change background color when element is active */
     background-color: $sfu;
-    border: 2px solid $sfu;
 
   }
 }
@@ -98,7 +94,6 @@ img {
   vertical-align: bottom;
   width: 100%;
 }
-
 
 video {
   display: block;
