swiper component for remaining freelance clients

--- a/scss/layout/_work.scss
+++ b/scss/layout/_work.scss
@@ -93,7 +93,9 @@
 .freelance {
   background-color: $freelance;
 
-  .pagination-nvbc {
+  .pagination-nvbc,
+  .pagination-ac,
+  .pagination-hpac {
     text-align: center;
     transform: translate3d(0, 0, 0);
     transition: 300ms;
