--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -3,7 +3,6 @@ html {
   box-sizing: border-box;
   font-family: "GothamRndSSm-Book", sans-serif;
   font-size: 62.5%;
-
 }
 
 *, 
@@ -15,6 +14,10 @@ html {
 body {
   background-color: $white;
   height: 100vh;
+}
+
+figure {
+  margin: 0 0 3.6rem;
 }
 
 .l-pad-bottom {
