--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -45,6 +45,12 @@ a {
   text-decoration: underline;
 }
 
+figcaption {
+  color: $white;
+  font-size: 1.2em;
+  text-align: center;
+}
+
 .intro {
   font-size: 3.6rem;
   font-weight: 100;
