--- a/scss/layout/_work.scss
+++ b/scss/layout/_work.scss
@@ -116,7 +116,7 @@
 
 img {
   display: block;
-  height: auto;
+  height: 100%;
   margin-left: auto;
   margin-right: auto;
   vertical-align: bottom;
