--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,7 +1,7 @@
 html {
   background-size: cover;
   box-sizing: border-box;
-  font-family: "GothamRndSSm-Book", sans-serif;
+  font-family: $font-stack;
   font-size: 62.5%;
 }
 
@@ -18,6 +18,10 @@ body {
 
 figure {
   margin: 0 0 3.6rem;
+
+  .swiper-slide > & {
+    margin: 0;
+  }
 }
 
 .l-pad-bottom {
